--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Power Pages Pro - 3PM
+title: 3️⃣ 🅿️ Ⓜ️ <br> Power Pages Pro
 description: An open resource for Power Pages Project Management
 theme: just-the-docs
 
